# R-Type

./: .gitignore  Build_windows.bat  CMakeLists.txt  CMakePresets.json  Install_windows.bat  README.md  build.bat  build.sh  build_error  exect.sh  install.sh  installer_linux.sh  main.cpp  push
.github/workflows/: cmake.yml
client/: CMakeLists.txt  Doxyfile.in  Info.plist  LICENSE  build.sh  icon.icns  install.sh  rtype
client/Archi/: Scene.hpp  SceneManager.hpp  main.cpp
client/Archi/Include/: Entity.hpp  IEntity.hpp  IScene.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
client/Archi/Include/components/: Animation.hpp  Ennemy.hpp  EventComponent.hpp  GameComponent.hpp  GraphicComponent.hpp  Hitbox.hpp  IComponent.hpp  MovementComponent.hpp  Player.hpp  Position.hpp  Projectile.hpp  SoundComponent.hpp  Sprite.hpp  Text.hpp  Velocity.hpp
client/Archi/Include/components/IScene/: Entity.hpp  IEntity.hpp  IScene.hpp  Scene.hpp  SceneManager.hpp
client/Archi/Include/systems/: AudioSystem.hpp  EventSystem.hpp  GameSystem.hpp  GraphicSystem.hpp  MovementSystem.hpp
client/Archi/components/: Entity.cpp  EventComponent.cpp  GameComponent.cpp  GraphicComponent.cpp  IEntity.cpp  IScene.cpp  MovementComponent.cpp  Scene.cpp  SceneManager.cpp  Velocity.cpp
client/Archi/systems/: EventSystem.cpp  GameSystem.cpp  GraphicSystem.cpp  ISystem.hpp  MovementSystem.cpp
client/client_autogen/: moc_predefs.h
client/doc/src/: RFC.tex
client/include/: Client.hpp  Core.hpp  Message.hpp  NetworkSystem.hpp  Sprite.hpp  UDPSocket.hpp  game.hpp
client/include/ecs/: Entity.hpp  IEntity.hpp  IScene.hpp  Scene.hpp  SceneManager.hpp
client/include/ecs/components/: Component.hpp  EntityCreator.hpp  EventComponent.hpp  GameComponent.hpp  GraphicComponent.hpp  IComponent.hpp  MovementComponent.hpp  Player.hpp  SoundComponent.hpp  Velocity.hpp
client/include/game/: ConnectMenu.hpp  GameScene.hpp  MainMenu.hpp  OptionMenu.hpp
client/include/systems/: AudioSystem.hpp  EventSystem.hpp  GameSystem.hpp  GraphicSystem.hpp  ISystem.hpp  MovementSystem.hpp  SystemManager.hpp
client/include/systems/network/: Client.hpp  Message.hpp  NetworkSystem.hpp  UDPSocket.hpp
client/src/: Core.cpp  Ennemy.cpp  client.cpp  client.hpp  main.cpp
client/src/ISystem/: Client.cpp  NetworkSystem.cpp  Sprite.cpp  main_client.cpp
client/src/Network/: Client.cpp  Message.cpp
client/src/ecs/: Core.cpp  Entity.cpp  IEntity.hpp  Scene.cpp  SceneManager.cpp
client/src/ecs/components/: EventComponent.cpp  GameComponent.cpp  GraphicComponent.cpp  MovementComponent.cpp  MovementManager.cpp  Scene.cpp
client/src/game/: ConnectMenu.cpp  GameScene.cpp  MainMenu.cpp  OptionMenu.cpp  spaceship.cpp
client/src/systems/: AudioSystem.cpp  EventSystem.cpp  GameSystem.cpp  GraphicSystem.cpp  MovementSystem.cpp  SystemManager.cpp
client/src/systems/Network/: Message.cpp  NetworkSystem.cpp  Sprite.cpp  UDPSocket.cpp
client/src/systems/network/: Message.cpp  NetworkSystem.cpp  UDPSocket.cpp
ecs/: AComponent.cpp  AComponent.h  CMakeCache.txt  CMakeLists.txt  Core.cpp  Core.hpp  Entity.cpp  Entity.h  Entity.hpp  Game.cpp  Game.h  Game.hpp  IEntity.h  IEntity.hpp  IScene.h  IScene.hpp  Makefile  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneManager.hpp  SceneType.h  Tag.h  Type.h  cmake_install.cmake  main.cpp
ecs/components/: Ennemi.cpp  Ennemi.h  Health.cpp  Health.h  Hitbox.cpp  Hitbox.h  MovementManager.cpp  MovementManager.hpp  Player.cpp  Player.h  Player.hpp  Position.cpp  Position.h  Rotation.cpp  Rotation.h  Scale.cpp  Scale.h  Shoot.cpp  Shoot.h  Velocity.cpp  Velocity.h  Velocity.hpp
ecs/server/: CMakeLists.txt
ecs/server/include/: Server.hpp
ecs/server/include/ecs/: Entity.hpp
ecs/server/include/ecs/components/: MovementManager.hpp
ecs/server/include/systems/: EventSystem.hpp  GraphicSystem.hpp  ISystem.hpp
ecs/server/include/systems/network/: SceneManager.hpp  UDPSocket.hpp
ecs/server/src/ecs/: SceneManager.cpp  main.cpp
ecs/server/src/ecs/components/: Player.cpp
ecs/systems/: AudioSystem.cpp  AudioSystem.h  ClientSystem.cpp  ClientSystem.h  CollideSystem.cpp  CollideSystem.h  DeviceSystem.cpp  DeviceSystem.hpp  EventSystem.cpp  EventSystem.h  EventSystem.hpp  GameSystem.cpp  GameSystem.h  GraphicSystem.cpp  GraphicSystem.h  GraphicSystem.hpp  IComponent.h  ISystem.h  ISystem.hpp  Isystem.hpp  MovementSystem.cpp  MovementSystem.hpp  NetworkSystem.cpp  NetworkSystem.h  ParticleSystem.cpp  ParticleSystem.h  ServerSystem.cpp  ServerSystem.h  SystemType.h
server/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  RFC.tex  cmake_install.cmake
server/include/: Core.hpp  ISystem.hpp  Message.hpp
server/include/ecs/: Entity.hpp  Scene.hpp  SceneManager.hpp
server/include/ecs/components/: EventComponent.hpp  GameComponent.hpp  GraphicComponent.hpp  IComponent.hpp  MovementComponent.hpp  SoundComponent.hpp
server/include/systems/: AudioSystem.hpp  EventSystem.hpp  GameSystem.hpp  GraphicSystem.hpp  ISystem.hpp  MovementSystem.hpp  SystemManager.hpp
server/include/systems/network/: Message.hpp  NetworkSystem.hpp  Server.hpp  Sprite.hpp  UDPSocket.hpp
server/src/: Core.cpp  client.cpp  main.cpp  server.cpp  server.hpp
server/src/ISystem/: Client.cpp  Client.hpp  ISystem.hpp  NetworkSystem.cpp  NetworkSystem.hpp  Server.cpp  Server.hpp  main_server.cpp
server/src/ecs/: Entity.cpp  Scene.cpp  SceneManager.cpp
server/src/ecs/components/: EventComponent.cpp  GameComponent.cpp  GraphicComponent.cpp  MovementComponent.cpp  MovementManager.cpp
server/src/systems/: AudioSystem.cpp  EventSystem.cpp  GameSystem.cpp  GraphicSystem.cpp  MovementSystem.cpp  SystemManager.cpp
server/src/systems/network/: ISystem.cpp  Message.cpp  NetworkSystem.cpp  Server.cpp  UDPSocket.cpp
src_build_test/: CMakeLists.txt  main.cpp
test/: question.txt
test/src/: Entity.cpp  Entity.hpp  IEntity.hpp  main.cpp
test/src/components/: Component.hpp  IComponent.hpp  Position.cpp  Position.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
test/src/systems/: GraphicSystem.cpp  (+2 more)
